<resources>
    <string name="app_name">FactoryScanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Beállítások</string>

    <string name="menu_home">Kezdőlap</string>
    <string name="menu_purchase">Bevételezés</string>
    <string name="menu_list">Kiszedési lista</string>
    <string name="menu_issuing">Anyag kiadás</string>
    <string name="menu_inventory">Leltár</string>
    <string name="menu_warehouse">Tárolóhely</string>
    <string name="title_activity_settings">Beállítások</string>
    <string name="title_activity_scan_barcode">Szkennelés</string>

    <!-- Preference Titles -->
    <string name="messages_header">Bejelentkezési adatok</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="label_print_purchase_title">Bevételezéskor</string>
    <string name="label_print_inventory_title">Leltározáskor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Just_moment">Kis türelmet</string>
    <string name="Data_Refress">Adatok frissítése</string>
    <string name="please_enter_username_password">Kérem adja meg a felhsználónevét és jelszavát</string>
    <string name="connection_error">Kérem ellenőrizze az alkalmazás hálózati beállításait!</string>
    <string name="invalid_credentials">Hibás bejelentkezési adatok!</string>
    <string name="No_data_found">Nincs találat!</string>
    <string name="label_print">Címke nyomtatás</string>
    <string name="menu_location">Tárolóhely</string>
    <string name="action_logout">Kijelentkezés</string>
    <string name="scanLogin">scanLogin</string>
    <string name="label_logout">Kijelentkezés</string>
    <string name="logout_delete_data">Bejelentkezési adatok törlése kijelentkezéskor</string>
    <string name="memo_label">Memo</string>
    <string name="label">Adagszám</string>
    <string name="adagszam">Adagszám</string>
    <string name="qunatity">Mennyiség</string>
    <string name="location">Tárolóhely</string>
    <string name="memo">Megjegyzés</string>
    <string name="home_scan_2">Vonalkód</string>
    <string name="scan_barcode">Olvassa le a vonalkódot..</string>
    <string name="location_filter">Tárolóhely lekérdezés</string>
    <string name="barcode">Vonalkód</string>
    <string name="filter_part_number">Cikkszám</string>
    <string name="supplier">Beszállító kód</string>
    <string name="advice_note_no">Szállítólevél száma</string>
    <string name="works_order_no">Munkalapszám</string>
    <string name="turn_on_flashlight">Zseblámpa</string>
    <string name="turn_off_flashlight">Zseblámpa ki</string>
    <string name="scan_from_fragment">scan from fragement</string>
</resources>