<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_home_page_120___"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_purchase"
            android:icon="@drawable/icons8_purchase_order_64"
            android:title="@string/menu_purchase" />
        <item
            android:id="@+id/nav_issuing"
            android:icon="@drawable/icons8_robot_64"
            android:title="@string/menu_issuing" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/icons8_open_parcel_100"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/icons8_barcode_reader_64"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/icons8_warehouse_64"
            android:title="@string/menu_warehouse" />
    </group>
</menu>