<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/button_issuing_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Munkalapra kiadás"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_picklist_home" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:hint="@string/home_scan_2"
        app:layout_constraintBottom_toBottomOf="@+id/scan_2"
        app:layout_constraintEnd_toStartOf="@+id/scan_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scan_2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/second_scan_result"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/scan_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scan_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_label_home"
        app:srcCompat="@drawable/icons8_barcode_reader_100" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_issuing_home" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_home_01"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:hint="@string/home_scan_2"
        app:layout_constraintBottom_toBottomOf="@+id/scan_1"
        app:layout_constraintEnd_toStartOf="@+id/scan_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scan_1" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_scan_result"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_home_03"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:hint="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/scan_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_location_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline10" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Adagszám:"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_home_03" />

    <TextView
        android:id="@+id/tv_batch_number_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline10" />

    <TextView
        android:id="@+id/tv_part_number_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView78" />

    <TextView
        android:id="@+id/tv_part_description_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_part_number_home" />

    <Button
        android:id="@+id/bt_label_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Címke nyomtatás"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_home_02" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_home_02"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/qunatity"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/tv_part_description_home">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittxt_quantity_in_location_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_picklist_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kiszedési listára kiadni"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_2" />

    <TextView
        android:id="@+id/tv_stock_UOM_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_label_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_part_description_home" />

    <ProgressBar
        android:id="@+id/progress_bar_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/scan_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/scan_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_barcode_reader_100" />
</androidx.constraintlayout.widget.ConstraintLayout>